<resources>
    <string name="app_name">Music Platform</string>
    <string name="music_platform_title">Music Platform</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="sign_in">Sign In</string>
    <string name="user_id">user_id</string>
    <string name="home_bottom_navigation_menu_title">Home</string>
    <string name="search_menu_item_title">Search</string>
    <string name="profile_bottom_navigation_menu_title">Profile</string>
    <string name="followers_title">Followers</string>
    <string name="following_title">Following</string>
    <string name="uploader_picture">uploader picture</string>
    <string name="uploader">uploader</string>
    <string name="song_picture">song picture</string>
    <string name="zero_time">00:00</string>
    <string name="play_pause_button">play pause button</string>
    <string name="unknown_duration_time">--:--</string>
    <string name="song">song</string>
    <string name="artist">artist</string>
    <string name="download">Download</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="add_post_menu_item_title">Add Post</string>
    <string name="logout_menu_item_title">Logout</string>
    <string name="about_menu_title">About</string>
    <string name="title_activity_add_post">AddPostActivity</string>
    <string name="share">Share</string>
    <string name="hint_searchable">search user…</string>
    <string name="edit_post">edit post</string>
    <string name="bin_icon">bin</string>
    <string name="delete_post">delete post</string>
    <string name="edit_icon">edit</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="email_hint">email</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_slogan">Just share your music</string>
    <string name="song_name_label">Song Name:</string>
    <string name="artist_name_label">Artist Name:</string>
    <string name="song_name">song name</string>
    <string name="artist_name">artist name</string>
    <string name="github_logo">github logo</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="app_logo">application logo</string>
    <string name="reset_password_instruction">Enter below your email address. You will receive an email with the instructions to reset your password.</string>
    <string name="send_email">Send Email</string>
    <string name="settings">Settings</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="delete_account">Delete Account</string>
    <string name="number_of_following_label">Number of Following:&#160;</string>
    <string name="number_of_followers_label">Number of Followers:&#160;</string>
    <string name="number_of_likes_label">Number of Likes:&#160;</string>
    <string name="number_of_dislikes_label">Number of Dislikes:&#160;</string>
    <string name="account">Account</string>
    <string name="try_following_someone">Ooops! It seems you don\'t have post to see. Try following someone!</string>
    <string name="sad_pet">sad pet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>