<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addPostMenuItem"
        android:icon="@drawable/ic_add"
        android:orderInCategory="1"
        android:title="@string/add_post_menu_item_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchMenuItem"
        android:icon="@drawable/ic_search"
        android:orderInCategory="2"
        android:title="@string/search_menu_item_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/settingsMenuItem"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="3"
        android:title="@string/account"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/logoutMenuItem"
        android:orderInCategory="4"
        android:title="@string/logout_menu_item_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/aboutMenuItem"
        android:orderInCategory="5"
        android:title="@string/about_menu_title"
        app:showAsAction="never" />

</menu>