<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_platform_title"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/app_logo"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text="@string/reset_password_instruction"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/resetEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:textColorHint="@color/light_gray"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />


    <Button
        android:id="@+id/sendEmailButton"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:textSize="25sp"
        android:text="@string/send_email" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:indeterminate="true"
        android:visibility="invisible" />

</LinearLayout>