<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homepage"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:onClick="homeNavigationBarListener"
        android:title="@string/home_bottom_navigation_menu_title" />

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:onClick="searchNavigationBarListener"
        android:title="@string/search_menu_item_title" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:onClick="profileNavigationBarListener"
        android:title="@string/profile_bottom_navigation_menu_title" />
</menu>