<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_bottom_sheet_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/edit_icon"
            android:src="@drawable/ic_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:padding="8dp"
            android:text="@string/edit_post"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/bin_icon"
            android:src="@drawable/ic_bin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:padding="8dp"
            android:text="@string/delete_post"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>